java.compiler is only needed for tests